# obsidian-concur

concur-plugin/: manifest.json  tsconfig.json
concur-plugin/src/: file-checker.ts  main.ts
concur-plugin/src/api/: file.ts  vault.ts
concur-plugin/src/models/: file.ts  vault.ts
concur-server/: .gitignore  Cargo.toml
concur-server/.sqlx/: query-0180ef1e4104cd5707d18fb29d00e5b9f6b9435bcd15f61ccda14f1e289a2e2e.json  query-7a5d4be42707aede3723e45bfd41c7ea0f682ef0423af4b1f199a49a046dcfc7.json  query-a55bedd6b6f665fc094d1fa9566599e36ef12ecc9d4f86db393847ba95e431ca.json
concur-server/migrations/: 20231124202036_create_vault_table.up.sql  20231124202103_create_file_table.up.sql  20231125073453_add_unique_key_to_file_table_for_path_and_vault_id.down.sql  20231125073453_add_unique_key_to_file_table_for_path_and_vault_id.up.sql  20231125123417_add_hash_to_file_table.down.sql  20231125123417_add_hash_to_file_table.up.sql  20231218074802_add_sync_time_column_to_file_table.down.sql  20231218074802_add_sync_time_column_to_file_table.up.sql  20231218102035_update_file_content_column_type.down.sql  20231218102035_update_file_content_column_type.up.sql  20240129193420_create_user_table.down.sql  20240129193420_create_user_table.up.sql  20240129193615_create_refresh_token_table.up.sql  20240129193842_create_client_table.up.sql
concur-server/src/: auth.rs  main.rs  models.rs  routes.rs
concur-server/src/models/: file.rs  vault.rs
concur-server/src/routes/: auth.rs  file.rs  vault.rs
