[package]
name = "concur-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.7", features = ["tracing", "macros", "query"]}
base64ct = { version = "1.6.0", features = ["alloc"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
futures = "0.3.29"
itertools = "0.12.0"
libsql = "0.2"
log = "0.4.20"
md-5 = "0.10.6"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
shuttle-axum = "0.42"
shuttle-runtime = { version = "0.42", default-features = false }
shuttle-turso = "0.42"
simplelog = "0.12.2"
tokio = { version = "1.34.0", features = ["full"] }
